--- a/core/Project.toml
+++ b/core/Project.toml
@@ -61,7 +61,7 @@ DataFrames = "1.4"
 DataInterpolations = "=5.3.1"
 DataStructures = "0.18"
 Dates = "<0.0.1, 1"
-DiffEqCallbacks = "3.6"
+DiffEqCallbacks = "3.6, 4"
 EnumX = "1.0"
 FiniteDiff = "2.21"
 ForwardDiff = "0.10"
